2025-06-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/59bcf680aafb6f054e150f70c8c71deb44ad04b1) and raygui ( https://github.com/raysan5/raygui/commit/99b37e4d4fdc19e7bf73844d6b9f177cbb27ce24 )

2025-05-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/7e072783683e8449c70e39148c4ac5ccc2ae8c49) and raygui ( https://github.com/raysan5/raygui/commit/cb78993237b4887fb0277317483b1c757d8ffc14 )

2025-04-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/1ec281e86fa518dd8d8d85271e42cf8db4340f41) and raygui ( https://github.com/raysan5/raygui/commit/0895c8b8c4bf9e111492b19fba336d62d4a0b960 )

2025-03-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/9a049d1d27e3fe92c2591bc190b7f497b5f0283e) and raygui ( https://github.com/raysan5/raygui/commit/ea928f56091078aad9af847a1607c22f06c5992f )

2025-02-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/99d2119dd6795205352cab41ca1ed7efd5d35c4e) and raygui ( https://github.com/raysan5/raygui/commit/e4a59f0afa6a379007a74b0c565c2787525eda36 )

2025-02-02  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/4f5a20a634918ca0fff893ad0ac586a515186c81) and raygui ( https://github.com/raysan5/raygui/commit/d36080ea7025b189374e85205bde5c8558b6561f )

2025-01-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/0275d13aa84f8a464b5246abbef9205b94c73c5e) and raygui ( https://github.com/raysan5/raygui/commit/76b36b597edb70ffaf96f046076adc20d67e7827 )

2025-01-11  vaiorabbit  <http://twitter.com/vaiorabbit>
